<resources>
    <string name="app_name">GroceryGuru</string>
    <string name="products">Products</string>
    <string name="null_str">null</string>
    <string name="ok">ok</string>
    <string name="add_entry">Add entry</string>
    <string name="dash">-</string>
    <string name="comment">comment</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="delete">Delete</string>
    <string name="repeat">Repeat</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="archive">Archive</string>
</resources>